test_programs/compile_failure/field_literal_overflow/src/main.nr
fn main() {
    foo(21888242871839275222246405745257275088548364400416034343698204186575808495617)
}

fn foo(_x: Field) {}
